--- a/inventory_project/inventory/templates/inventory/login.html
+++ b/inventory_project/inventory/templates/inventory/login.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Login</title>
-</head>
-<body>
-    <h1>Login</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Login</button>
-    </form>
-    <p>Don't have an account? <a href="{% url 'signup' %}">Sign up here</a>.</p>
-</body>
-</html>
+{% extends 'inventory/base.html' %}
+{% load crispy_forms_tags %}
+
+{% block content %}
+<div class="row">
+	<div class="col-11 col-md-4 mx-auto mt-5">
+		<h1>Log In</h1>
+		<form method="post">
+			{% csrf_token %}
+			{{ form|crispy }}
+			<button class="btn btn-primary">Sign In</button>
+		</form>
+		<div class="pt-3">
+			<small class="text-muted">Need an account? <a href="{% url 'signup' %}" class="ml-2">Sign Up</a></small>
+		</div>
+	</div>
+</div>
+{% endblock content %}
