--- a/inventory_management/inventory/templates/inventory/dashboard.html
+++ b/inventory_management/inventory/templates/inventory/dashboard.html
@@ -1,3 +1,4 @@
+
 {% extends 'inventory/base.html' %}
 
 {% block content %}
@@ -19,7 +20,7 @@
 	<div class="row">
 		<div class="col-md-10 col-12 mx-auto mt-5">
 			<div class="d-flex justify-content-end">
-				<a href="{% url 'add-item' %}" class="btn btn-primary">+</a>
+				<a href="{% url 'inventory:add-item' %}" class="btn btn-primary">+</a>
 			</div>
 
 			<table class="table table-hover table-striped">
@@ -55,8 +56,8 @@
 							<td class="text-success">{{ item.quantity }}</td>
 						{% endif %}
 						<td>{{ item.category.name }}</td>
-						<td><a href="{% url 'edit-item' item.id %}" class="btn btn-outline-secondary">Edit</a></td>
-						<td><a href="{% url 'delete-item' item.id %}" class="btn btn-secondary">Delete</a></td>
+						<td><a href="{% url 'inventory:edit-item' item.id %}" class="btn btn-outline-secondary">Edit</a></td>
+						<td><a href="{% url 'inventory:delete-item' item.id %}" class="btn btn-secondary">Delete</a></td>
 					</tr>
 					{% endfor %}
 				</tbody>
